# xe

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  architecture.md  behavior.h  camera.cpp  camera.h  cube.cpp  cube.h  exceptions.h  game.h  gameobject.cpp  gameobject.h  gui.cpp  gui.h  imgui.ini  input.cpp  input.h  main.cpp  material.cpp  material.h  renderable.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scenegraph.cpp  scenegraph.h  shaders.cpp  shaders.h  texture.cpp  texture.h
examples/: basicmovement_behavior.lua
gameobjects/: cube.cpp  cube.h
imgui/: CMakeLists.txt  imgui_impl_glfw.h
services/: input.cpp  input.h  locator.cpp  locator.h  resources.cpp  resources.h
shaders/: flattesting.yml
shaders/fragment/: depthview.frag  flatcolor.frag  helloworld.frag  simplelighting.frag  simpleuv.frag
shaders/vertex/: passthrough.vert  pmat_normals.vert  project_matrix.vert
ui/: inputwindow.h  logwindow.h  theme.cpp  theme.h  util.h
